--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,5 +27,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    compileOnly 'com.facebook.react:react-native:+'
 }
